--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,11 @@ authors = [
 ]
 
 dependencies = [
+    "nltk>=3.9.1",
     "pandas>=2.3.2",
     "pillow>=11.3.0",
     "psycopg2-binary>=2.9.10",
+    "pytesseract>=0.3.13",
     "pyyaml>=6.0.2",
     "requests>=2.32.5",
     "sqlalchemy>=2.0.43",
