--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ authors = [
 ]
 
 dependencies = [
+    "clip",
     "nltk>=3.9.1",
     "pandas>=2.3.2",
     "pillow>=11.3.0",
@@ -19,7 +20,9 @@ dependencies = [
     "pyyaml>=6.0.2",
     "requests>=2.32.5",
     "sqlalchemy>=2.0.43",
+    "torch>=2.8.0",
     "tqdm>=4.67.1",
+    "transformers>=4.56.1",
 ]
 
 [tool.setuptools.packages.find]
