--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ dependencies = [
     "pytesseract>=0.3.13",
     "pyyaml>=6.0.2",
     "requests>=2.32.5",
+    "scikit-learn>=1.7.2",
     "sqlalchemy>=2.0.43",
+    "tensorflow>=2.20.0",
     "torch>=2.8.0",
     "tqdm>=4.67.1",
     "transformers>=4.56.1",
