--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,13 @@ authors = [
 
 dependencies = [
     "clip",
+    "fastapi>=0.116.1",
     "nltk>=3.9.1",
     "pandas>=2.3.2",
     "pillow>=11.3.0",
     "psycopg2-binary>=2.9.10",
     "pytesseract>=0.3.13",
+    "python-multipart>=0.0.20",
     "pyyaml>=6.0.2",
     "requests>=2.32.5",
     "scikit-learn>=1.7.2",
@@ -25,6 +27,7 @@ dependencies = [
     "torch>=2.8.0",
     "tqdm>=4.67.1",
     "transformers>=4.56.1",
+    "uvicorn[standard]>=0.35.0",
 ]
 
 [tool.setuptools.packages.find]
