--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "dsdc"
 version = "0.1.0"
 description = "DataScientest Document Classification Project"
-requires-python = "==3.13.*"
+requires-python = ">=3.12"
 readme = "README.md"
 license = "MIT"
 authors = [
@@ -29,6 +29,10 @@ dependencies = [
     "transformers>=4.56.1",
     "uvicorn[standard]>=0.35.0",
 ]
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 where = ["."]
