--- a/services/docker-compose.yaml
+++ b/services/docker-compose.yaml
@@ -1,3 +1,49 @@
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
+#
+#   http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied.  See the License for the
+# specific language governing permissions and limitations
+# under the License.
+#
+
+# Basic Airflow cluster configuration for CeleryExecutor with Redis and PostgreSQL.
+#
+# WARNING: This configuration is for local development. Do not use it in a production deployment.
+#
+# This configuration supports basic configuration using environment variables or an .env file
+# The following variables are supported:
+#
+# AIRFLOW_IMAGE_NAME           - Docker image name used to run Airflow.
+#                                Default: apache/airflow:3.0.6
+# AIRFLOW_UID                  - User ID in Airflow containers
+#                                Default: 50000
+# AIRFLOW_PROJ_DIR             - Base path to which all the files will be volumed.
+#                                Default: .
+# Those configurations are useful mostly in case of standalone testing/running Airflow in test/try-out mode
+#
+# _AIRFLOW_WWW_USER_USERNAME   - Username for the administrator account (if requested).
+#                                Default: airflow
+# _AIRFLOW_WWW_USER_PASSWORD   - Password for the administrator account (if requested).
+#                                Default: airflow
+# _PIP_ADDITIONAL_REQUIREMENTS - Additional PIP requirements to add when starting all containers.
+#                                Use this option ONLY for quick checks. Installing requirements at container
+#                                startup is done EVERY TIME the service is started.
+#                                A better way is to build a custom image or extend the official image
+#                                as described in https://airflow.apache.org/docs/docker-stack/build.html.
+#                                Default: ''
+#
+# Feel free to modify this file to suit your needs.
+---
 x-airflow-common:
   &airflow-common
   # In order to add custom dependencies or upgrade provider distributions you can use your extended image.
@@ -9,8 +55,8 @@ x-airflow-common:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
     AIRFLOW__CORE__AUTH_MANAGER: airflow.providers.fab.auth_manager.fab_auth_manager.FabAuthManager
-    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow_strong_password@postgres/airflow
-    AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow_strong_password@postgres/airflow
+    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow_strong_password@dsdc-postgres/airflow
+    AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow_strong_password@dsdc-postgres/airflow
     AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
     AIRFLOW__CORE__FERNET_KEY: ''
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
@@ -26,12 +72,21 @@ x-airflow-common:
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
     # The following line can be used to set a custom config file, stored in the local config folder
     AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg'
+    DSDC_DIR: '/opt/dsdc'
+    PYTHONPATH: '/opt/airflow/plugins:/opt/airflow/plugins/dsdc:/opt/dsdc'
+
   volumes:
-    - ${DSDC_DIR:-.}/services/airflow/dags:/opt/airflow/dags
-    - ${DSDC_DIR:-.}/logs:/opt/airflow/logs
-    # - ${DSDC_DIR:-.}/services/airflow/config:/opt/airflow/config
-    # - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
-  user: "${AIRFLOW_UID:-50000}:0"
+    - ${DSDC_DIR}/services/airflow/dags:/opt/airflow/dags
+    - ${DSDC_DIR}/logs:/opt/airflow/logs
+    - ${DSDC_DIR}/services/airflow/config:/opt/airflow/config
+    - ${DSDC_DIR:-.}/dsdc:/opt/dsdc/dsdc
+    - ${DSDC_DIR:-.}/data:/opt/dsdc/data
+    - ${DSDC_DIR:-.}/.dsdc_project_root:/opt/dsdc/.dsdc_project_root
+    - ${DSDC_DIR:-.}/services/airflow/config.yaml:/opt/dsdc/config.yaml
+    - ${DSDC_DIR:-.}/.env.secrets:/opt/dsdc/.env.secrets
+    - ${DSDC_DIR:-.}/../ds-project/mai25_bds_extraction/data/raw/IIT-CDIP:/opt/dsdc/mock_data/IIT-CDIP
+
+    # - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins  user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
     redis:
@@ -59,70 +114,7 @@ services:
     ports:
       - "5432:5432" # TODO: cabler avec config.yaml
 
-  extract_text:
-    container_name: dsdc_extract_text
-    image: dsdc_extract_text:latest
-    build:
-      context: ..
-      dockerfile: services/extract_text/Dockerfile
-    ports:
-      - "64411:8000"
 
-  process_text:
-    container_name: dsdc_process_text
-    image: dsdc_process_text:latest
-    build:
-      context: ..
-      dockerfile: services/process_text/Dockerfile
-    ports:
-      - "64412:8000"
-
-  process_image:
-    container_name: dsdc_process_image
-    image: dsdc_process_image:latest
-    build:
-      context: ..
-      dockerfile: services/process_image/Dockerfile
-    ports:
-      - "64413:8000"
-
-  compute_clip_embeddings:
-    container_name: dsdc_compute_clip_embeddings
-    image: dsdc_compute_clip_embeddings:latest
-    build:
-      context: ..
-      dockerfile: services/compute_clip_embeddings/Dockerfile
-    ports:
-      - "64414:8000"
-
-  # train_mlp:
-  #   container_name: dsdc_train_mlp
-  #   image: dsdc_train_mlp:latest
-  #   build:
-  #     context: ..
-  #     dockerfile: services/train_mlp/Dockerfile
-  #   ports:
-  #     - "64415:8000"
-
-  # mlflow:
-  #   image: ghcr.io/mlflow/mlflow:v2.11.1
-  #   container_name: mlflow
-  #   environment:
-  #     MLFLOW_TRACKING_URI: http://mlflow:5000
-  #   command: >
-  #     mlflow server 
-  #     --backend-store-uri postgresql+psycopg2://airflow:airflow@postgres/airflow 
-  #     --default-artifact-root /mlruns 
-  #     --host 0.0.0.0 
-  #     --port 5000
-  #   volumes:
-  #     - ../mlruns:/mlruns
-  #     - ../data:/data
-  #     - ../models:/models
-  #   ports:
-  #     - "5000:5000"
-  #   depends_on:
-  #     - postgres
   redis:
     # Redis is limited to 7.2-bookworm due to licencing change
     # https://redis.io/blog/redis-adopts-dual-source-available-licensing/
@@ -353,6 +345,42 @@ services:
       airflow-init:
         condition: service_completed_successfully
 
+  extract_text:
+    container_name: dsdc_extract_text
+    image: dsdc_extract_text:latest
+    build:
+      context: ..
+      dockerfile: services/extract_text/Dockerfile
+    ports:
+      - "64411:8000"
+
+  process_text:
+    container_name: dsdc_process_text
+    image: dsdc_process_text:latest
+    build:
+      context: ..
+      dockerfile: services/process_text/Dockerfile
+    ports:
+      - "64412:8000"
+
+  process_image:
+    container_name: dsdc_process_image
+    image: dsdc_process_image:latest
+    build:
+      context: ..
+      dockerfile: services/process_image/Dockerfile
+    ports:
+      - "64413:8000"
+
+  compute_clip_embeddings:
+    container_name: dsdc_compute_clip_embeddings
+    image: dsdc_compute_clip_embeddings:latest
+    build:
+      context: ..
+      dockerfile: services/compute_clip_embeddings/Dockerfile
+    ports:
+      - "64414:8000"
+
 volumes:
   dsdc_db:
-    external: true
+    external: 'true'
