upgraded .env.secrets.template

--- a/.env.secrets.template
+++ b/.env.secrets.template
@@ -3,9 +3,17 @@
 #.env file defines all required common variables for DSDC project
 
 # Postgres
-POSTGRES_USER=DSDC_USER
-POSTGRES_PASSWORD=CHANGE_ME_PLEASE
+POSTGRES_USER=dsdc_admin
+POSTGRES_PASSWORD=my_strong_password
+AIRFLOW_USER=airflow
+AIRFLOW_PASSWORD=airflow_strong_password
+DSDC_USER=dsdc_service
+DSDC_PASSWORD=dsdc_service_strong_password
 
 # Airflow
+AIRFLOW_FERNET_KEY=your_fernet_key_here
+_AIRFLOW_WWW_USER_USERNAME=airflow
+_AIRFLOW_WWW_USER_PASSWORD=airflow
+_AIRFLOW_WWW_USER_CREATE=true
 
 # MLFlow
