.env.secrets ignore only in project root

--- a/.gitignore
+++ b/.gitignore
@@ -56,8 +56,8 @@ data/raw/
 data/processed/
 models/clip-vit-base/
 *.log
-.env.secrets
 token.txt
+/.env.secrets
 /config.yaml
 
 # operationnal folders
