--- a/services/docker-compose.yaml
+++ b/services/docker-compose.yaml
@@ -84,10 +84,12 @@ x-airflow-common:
     - ${DSDC_DIR}/services/airflow/config:/opt/airflow/config
     - ${DSDC_DIR:-.}/dsdc:/opt/dsdc/dsdc
     - ${DSDC_DIR:-.}/data:/opt/dsdc/data
+    - ${DSDC_DIR:-.}/models:/opt/dsdc/models
     - ${DSDC_DIR:-.}/.dsdc_project_root:/opt/dsdc/.dsdc_project_root
     - ${DSDC_DIR:-.}/services/airflow/config.yaml:/opt/dsdc/config.yaml
     - ${DSDC_DIR:-.}/.env.secrets:/opt/dsdc/.env.secrets
     - ${DSDC_DIR:-.}/../ds-project/mai25_bds_extraction/data/raw/IIT-CDIP:/opt/dsdc/mock_data/IIT-CDIP
+
 
     # - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins  user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
@@ -116,6 +118,20 @@ services:
       - dsdc_db:/var/lib/postgresql/data
     ports:
       - "5432:5432" # TODO: cabler avec config.yaml
+
+  pgadim:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    restart: always
+    ports:
+      - "5050:80"  # TODO: cabler avec config.yaml
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@example.com
+      PGADMIN_DEFAULT_PASSWORD: adminpassword
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    depends_on:
+      - postgres
 
 
   redis:
@@ -383,7 +399,34 @@ services:
       dockerfile: services/compute_clip_embeddings/Dockerfile
     ports:
       - "64414:8000"
+    restart: always
 
+  train:
+    container_name: dsdc_train
+    image: dsdc_train:latest
+    build:
+      context: ..
+      dockerfile: services/train/Dockerfile
+    ports:
+      - "64415:8000"
+    volumes:
+    - ${DSDC_DIR:-.}/models:/opt/dsdc/models
+
+  mlflow:
+    build:
+      context: ..
+      dockerfile: services/mlflow/Dockerfile
+    container_name: mlflow
+    ports:
+      - "64405:5000"
+    environment:
+      MLFLOW_BACKEND_STORE_URI: postgresql://mlflow:mlflow_strong_password@dsdc-postgres:5432/mlflow
+      MLFLOW_ARTIFACT_ROOT: file:///mlflow/artifacts
+    volumes:
+      - ${DSDC_DIR:-.}/models/mlruns:/mlflow
+    depends_on:
+      - postgres
 volumes:
   dsdc_db:
     external: 'true'
+  pgadmin_data:
