--- a/services/monitoring/prometheus/prometheus.yml
+++ b/services/monitoring/prometheus/prometheus.yml
@@ -1,11 +1,16 @@
 global:
-  scrape_interval: 15s
+  scrape_interval: 5s
 
 scrape_configs:
   - job_name: 'cadvisor'
     static_configs:
       - targets: ['cadvisor:8080']
-  - job_name: 'postgres'
+  - job_name: 'postgres-dsdc'
     static_configs:
-      - targets: ['services-postgres-exporter-1:9187']
-  
+      - targets: ['services-dsdc-postgres_exporter-1:9187']
+  - job_name: 'postgres-airflow'
+    static_configs:
+      - targets: ['services-airflow-postgres_exporter-1:9187']
+  - job_name: 'postgres-mlflow'
+    static_configs:
+      - targets: ['services-mlflow-postgres_exporter-1:9187']
