--- a/services/process-image/Dockerfile
+++ b/services/process-image/Dockerfile
@@ -4,12 +4,13 @@ WORKDIR /app
 
 COPY dsdc ./dsdc
 COPY .dsdc_project_root .
-COPY .env.secrets .
 COPY config.yaml .
-COPY services/process_text/main.py .
-COPY services/process_text/pyproject.toml .
+COPY services/process-image/main.py .
+COPY services/process-image/pyproject.toml .
 
 # Installer tesseract OCR + langues anglaises
+RUN apt-get update && apt-get install -y tesseract-ocr tesseract-ocr-eng && rm -rf /var/lib/apt/lists/*
+
 RUN pip install --upgrade pip setuptools wheel
 RUN pip install --no-cache-dir .
 
