fixed query (models yet not registered inside mlflow)

--- a/services/monitoring/postgres-exporters/mlflow/queries.yaml
+++ b/services/monitoring/postgres-exporters/mlflow/queries.yaml
@@ -1,6 +1,6 @@
 trained_models_count:
   query: |
-    SELECT COUNT(*) AS trained_models FROM registered_models;
+    SELECT COUNT(*) AS run_uuid FROM runs;
   metrics:
     - trained_models:
         usage: GAUGE
