--- a/services/auth/Dockerfile
+++ b/services/auth/Dockerfile
@@ -1,8 +1,19 @@
-FROM python:3.10-slim
+FROM python:3.13-slim
+
 WORKDIR /app
-COPY services/auth/requirements.txt /app/requirements.txt
-RUN pip install -r requirements.txt
-COPY services/auth /app
-ENV JWT_SECRET=change-me
-EXPOSE 7000
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "7000"]
+
+COPY dsdc ./dsdc
+COPY .dsdc_project_root .
+COPY config.yaml .
+COPY services/auth/main.py .
+COPY services/auth/pyproject.toml .
+
+
+# Installer tesseract OCR + langues anglaises
+
+RUN pip install --upgrade pip setuptools wheel
+RUN pip install --no-cache-dir .
+
+EXPOSE 8000
+
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
