--- a/services/auth/pyproject.toml
+++ b/services/auth/pyproject.toml
@@ -12,28 +12,11 @@ authors = [
 
 dependencies = [
     "argon2-cffi>=25.1.0",
-    "clip",
     "fastapi>=0.116.1",
-    "matplotlib>=3.10.6",
-    "mlflow>=3.4.0",
-    "nltk>=3.9.1",
-    "pandas>=2.3.2",
-    "passlib[bcrypt]>=1.7.4",
-    "pillow>=11.3.0",
-    "plotly>=6.3.0",
-    "psycopg2-binary>=2.9.10",
-    "pytesseract>=0.3.13",
+    "passlib>=1.7.4",
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
-    "pyyaml>=6.0.2",
-    "requests>=2.32.5",
-    "scikit-learn>=1.7.2",
-    "sqlalchemy>=2.0.43",
-    "streamlit>=1.50.0",
-    "tensorflow>=2.20.0",
-    "torch>=2.8.0",
-    "tqdm>=4.67.1",
-    "transformers>=4.56.1",
+#    "requests>=2.32.5",
     "uvicorn[standard]>=0.35.0",
 ]
 
