added auth image name in docker-compose

--- a/services/docker-compose.yaml
+++ b/services/docker-compose.yaml
@@ -396,6 +396,7 @@ services:
 # region auth
   auth:
     container_name: dsdc-auth
+    image: dsdc-auth:latest
     build:
       context: ..
       dockerfile: services/auth/Dockerfile
