--- a/services/docker-compose.yaml
+++ b/services/docker-compose.yaml
@@ -388,6 +388,8 @@ services:
     build:
       context: ..
       dockerfile: services/predict/Dockerfile
+    environment:
+      DSDC_JWT_SECRET_KEY: ${DSDC_JWT_SECRET_KEY}
     ports:
       - "${DSDC_PREDICT_PORT_MAPPING}"
     volumes:
